
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:weightSum="7"
        tools:context=".controller.HistoryActivity"
        android:id="@+id/history_main_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/sept_jours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_une_semaine"/>

                <ImageButton
                    android:id="@+id/btn_une_semaine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />

            </FrameLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/six_jours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_six_jours"/>

                <ImageButton
                    android:id="@+id/btn_six_jour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />

            </FrameLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/cinq_jours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_cinq_jours"/>

                <ImageButton
                    android:id="@+id/btn_cinq_jour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />

            </FrameLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/quatre_jours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_quatre_jours"/>

                <ImageButton
                    android:id="@+id/btn_quatre_jour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />
            </FrameLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/trois_jours"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_trois_jours"/>

                <ImageButton
                    android:id="@+id/btn_trois_jour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />
            </FrameLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/avant_hier_bg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_avant_hier"/>

                <ImageButton
                    android:id="@+id/btn_avant_hier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />

            </FrameLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/hier_bg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/text_hier"/>

                <ImageButton
                    android:id="@+id/btn_hier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:visibility="invisible"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_comment_black_48px" />

            </FrameLayout>



        </LinearLayout>

    </LinearLayout>
